remove gaps between elements in the footer and fix font fallback mechanism

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,14 @@
 /* Utilities */
 
+@font-face {
+  font-family: "cyberpunkregular";
+  src: url("../fonts/cyberpunk-webfont.woff2") format("woff2"),
+       url("../fonts/cyberpunk-webfont.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+  font-display: fallback;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -9,14 +18,6 @@
 
 a {
   text-decoration: none;
-}
-
-@font-face {
-  font-family: "cyberpunkregular";
-  src: url("../fonts/cyberpunk-webfont.woff2") format("woff2"),
-       url("../fonts/cyberpunk-webfont.woff") format("woff");
-  font-weight: normal;
-  font-style: normal;
 }
 
 body {
@@ -463,22 +464,23 @@ li:nth-last-child(1) {
 
 /* Footer - main pages */
 
-.footer-main {
+footer {
   text-align: center;
   border-top: #f7f705 solid 5px;
 }
 
-.footer-main a {
+footer a {
   color: #F4F4F4;
+}
+
+.social-media-links-footer {
+  min-height: 60px;
+  font-size: 0px;
 }
 
 .social-media-links-footer i {
   margin-top: 15px;
   margin-left: 10px;
-}
-
-.social-media-links-footer {
-  min-height: 60px;
   font-size: 30px;
 }
 
